# flappy-bird

./: .gitignore  Bird.cpp  CMakeLists.txt  Game.cpp  Game.h  Pipe.cpp  Pipe.h  README.md  flappy bird.sln  flappy bird.vcxproj  flappy bird.vcxproj.filters  main.cpp
header/: Bird.h  Game.h  Global.h  Pipe.h
src/: Bird.cpp  Game.cpp  Pipe.cpp  main.cpp
